--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="/plugins/gmaps-heatmap/gmaps-heatmap.js"></script>
   </head>
   <body>
-    <h1>Gmaps Heatmap Overlay Example</h1>
+    <h1>Whack Weather</h1>
     <div id="map-canvas"></div>
     <div id="all-examples-info">
           <strong style="font-weight:bold;line-height:200%;font-size:18px;">Looking for more examples?</strong> <br />Check out the full <a href="http://www.patrick-wied.at/static/heatmapjs/examples.html?utm_source=gh_local" target="_blank">list of all heatmap.js examples</a> with more pointers &amp; inline documentation.
