--- a/index.html
+++ b/index.html
@@ -4,17 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
         <title>Whack Weather</title>
-        <link rel="style" href="/css/styles.css" media="all" />
-        <style>
-        html { height: 100% }
-        body { height: 100%; margin: 0; padding: 0; font-family:sans-serif; }
-        #map-canvas { height: 100% }
-        h1 { position:absolute; background:black; color:white; padding:10px; font-weight:200; z-index:10000;}
-        #all-examples-info { position:absolute; background:white; font-size:16px; padding:20px; bottom:20px; width:350px; line-height:150%; border:1px solid rgba(0,0,0,.2);}
-        </style>
+        <link rel="stylesheet" type="text/css" href="/css/styles.css" media="all" />
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
         <script src="/heatmap-min.js"></script>
         <script src="/google-heat.js"></script>
+        <script src="/weather.js"></script>
     </head>
     <body>
     <h1>Whack Weather</h1>
