--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <title>Whack Weather</title>
         <link rel="stylesheet" type="text/css" href="/css/styles.css" media="all" />
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-        <script src="/heatmap-min.js"></script>
-        <script src="/google-heat.js"></script>
-        <script src="/weather.js"></script>
+        <script src="/js/heatmap-min.js"></script>
+        <script src="/js/google-heat.js"></script>
+        <script src="/js/weather.js"></script>
     </head>
     <body>
     <h1>Whack Weather</h1>
