--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         };
 
             heatmap.setData(testData);
+
+            let coords = getCoordinates();
+            console.log(coords);
         </script>
     </body>
 </html>
