--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
         <title>Whack Weather</title>
         <link rel="stylesheet" type="text/css" href="/css/styles.css" media="all" />
+
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
         <script src="/js/heatmap-min.js"></script>
         <script src="/js/google-heat.js"></script>
