--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-        <script src="/js/heatmap-min.js"></script>
-        <script src="/js/google-heat.js"></script>
-        <script src="/js/weather.js"></script>
+        <script src="js/heatmap-min.js"></script>
+        <script src="js/google-heat.js"></script>
+        <script src="js/weather.js"></script>
     </head>
     <body>
     <h1>Whack Weather</h1>
