--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="/css/styles.css" media="all" />
 
         <script src="js/jquery-min.js"></script>
-        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&key=AIzaSyA_GzSDM0Y3WgALBzAMRwBcipifAuPCO6Y"></script>
         <script src="js/heatmap-min.js"></script>
         <script src="js/google-heat.js"></script>
         <script src="js/weather.js"></script>
@@ -25,6 +25,15 @@
 
                     <label>Precipitation Intensity %</label>
                     <input type="number" id="precipPercent" />
+
+                    <label>Wind Speed (km/h)</label>
+                    <input type="number" id="windSpeed" />
+
+                    <label>Visibility %</label>
+                    <input type="number" id="visibilityPercent" />
+
+                    <label>Humidity %</label>
+                    <input type="number" id="humidityPercent" />
 
                     <input type="submit" />
                 </form>
