--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="/css/styles.css" media="all" />
 
         <script src="js/jquery-min.js"></script>
-        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&key=AIzaSyA_GzSDM0Y3WgALBzAMRwBcipifAuPCO6Y"></script>
+        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
         <script src="js/heatmap-min.js"></script>
         <script src="js/google-heat.js"></script>
         <script src="js/weather.js"></script>
@@ -20,21 +20,22 @@
                     <label>Check for danger zones instead</label>
                     <input type="checkbox" id="danger" checked="checked" />
 
-                    <label>Precipitation Type</label>
-                    <input type="text" id="precip" />
+                    <div id="additionalInfo">
+                        <label>Precipitation Type</label>
+                        <input type="text" id="precip" />
 
-                    <label>Precipitation Intensity %</label>
-                    <input type="number" id="precipPercent" />
+                        <label>Over Precipitation Intensity (mm/hour)</label>
+                        <input type="number" id="precipIntensity" />
 
-                    <label>Wind Speed (km/h)</label>
-                    <input type="number" id="windSpeed" />
+                        <label>Over Wind Speed (m/sec)</label>
+                        <input type="number" id="windSpeed" />
 
-                    <label>Visibility %</label>
-                    <input type="number" id="visibilityPercent" />
+                        <label>Below Visibility (km)</label>
+                        <input type="number" id="visibility" />
 
-                    <label>Humidity %</label>
-                    <input type="number" id="humidityPercent" />
-
+                        <label>Over Humidity %</label>
+                        <input type="number" id="humidityPercent" />
+                    </div>
                     <input type="submit" />
                 </form>
             </div>
