--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                         <input type="number" id="humidityPercent" />
                     </div>
                     <input type="submit" />
+                    <br>
+                    <button class="reasoningButton" onclick="giveReasoning()">Reasoning</button>
                 </form>
             </div>
             
